--- a/index.html
+++ b/index.html
@@ -37,12 +37,22 @@
                     <button type="button" id="oneens_btn" class="vragen_btn">Oneens</button>
                     <button type="button" id="skip" class="skip">Sla deze vraag over <i class="fas fa-arrow-right"></i></button>
                 </div>
+                <div class="vragen_partijen" id="vragen_partijen">
+                    <div id="partie_name_container"></div>
+                    <div id="partie_statement_container"></div>
+                </div>
             </div>
         </div>
         <div class="resultaat_container" id="resultScreen">
             <div id="title_result" class="title_result">Dit is uw partij: </div>
             <div id="statement_result" class="statement_result">Statement: </div>
             <div id="partij_size_result" class="partij_size_result">1</div>
+            <div class="resultaat_btn_container">
+                <button type="button" class="vragen_btn" id="bigParties">Grootte partijen</button>
+                <button type="button" class="vragen_btn" id="smallParties">Kleine partijen</button>
+                <button type="button" class="vragen_btn" id="seculaireParties">Seculaire partijen</button>
+                <button type="button" class="vragen_btn" id="allParties">Alle partijen</button>
+            </div>
         </div>
     </div>
     <script src="script/script.js"></script>
