--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
             </div>
         </div>
         <div class="resultaat_container" id="resultScreen">
-            <div id="title_result" class="title_result">Dit is uw partij: </div>
-            <div id="statement_result" class="statement_result">Statement: </div>
-            <div id="partij_size_result" class="partij_size_result">1</div>
+            <div class="resultaat_partij_info_container" id="resultaat_partij_info_container">
+            </div>
             <div class="resultaat_btn_container">
                 <button type="button" class="vragen_btn" id="bigParties">Grootte partijen</button>
                 <button type="button" class="vragen_btn" id="smallParties">Kleine partijen</button>
