Laatste dingen aangepast zoals extra onderwerpen

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
                 </div>
             </div>
         </div>
+        <div class="extra_container" id="extraScreen">
+            <div class="extra_header">
+                <h2>Zijn er onderwerpen die u extra belangrijk vind?</h2>
+                <p>Aangevinke stellingen tellen extra mee bij het berekenen van het resultaat</p>
+                <button type="button"  class="vragen_btn" id="extra_btn">Ga verder</button>
+            </div>
+            <div class="extra_content" id="extra_content">
+
+            </div>
+        </div>
         <div class="resultaat_container" id="resultScreen">
             <div class="resultaat_partij_info_container" id="resultaat_partij_info_container">
             </div>
